--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,63 +1,43 @@
-upstream auth_service {
-    server auth-service:8000;
-}
-
-upstream user_service {
-    server user-service:8000;
-}
-
-upstream post_service {
-    server post-service:8000;
-}
-
-upstream comment_service {
-    server comment-service:8000;
-}
+upstream auth_service     { server auth-service:8000; }
+upstream user_service     { server user-service:8000; }
+upstream post_service     { server post-service:8000; }
+upstream comment_service  { server comment-service:8000; }
 
 server {
     listen 80;
 
-    # Auth service: /auth/...
-    location /auth/ {
-        proxy_pass http://auth_service/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
-    # User service: /users/...
-    location /users/ {
-        proxy_pass http://user_service/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
-    # Post service: /posts/...
-    location /posts/ {
-        proxy_pass http://post_service/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
-    # Comment service: /comments/...
-    location /comments/ {
-        proxy_pass http://comment_service/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
-    # Simple gateway health
+    # Gateway health
     location = /health {
         return 200 "ok";
         add_header Content-Type text/plain;
     }
 
-    # Optional: root path info
+    # Optional root
     location = / {
-        return 200 "DockPress API Gateway";
+        return 200 "MicroBlogg API Gateway";
         add_header Content-Type text/plain;
     }
+
+    # NOTE: no trailing slash in proxy_pass lines below
+    location /auth/     { proxy_pass http://auth_service; }
+    location /users/    { proxy_pass http://user_service; }
+    location /posts/    { proxy_pass http://post_service; }
+    location /comments/ { proxy_pass http://comment_service; }
+
+    # Common proxy headers (applies to all locations in this server)
+    proxy_set_header Host              $host;
+    proxy_set_header X-Real-IP         $remote_addr;
+    proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+
+    # Sensible timeouts during dev (optional)
+    proxy_connect_timeout 5s;
+    proxy_send_timeout    15s;
+    proxy_read_timeout    15s;
+
+    # Avoid unwanted Location header rewrites
+    proxy_redirect off;
+
+    # Allow JSON bodies comfortably
+    client_max_body_size 2m;
 }
