--- a/auth-service/requirements.txt
+++ b/auth-service/requirements.txt
@@ -1,6 +1,8 @@
 fastapi==0.104.1
-uvicorn==0.24.0
+uvicorn[standard]==0.24.0
 pydantic==2.5.0
-redis==5.0.1
-httpx==0.25.2
-python-dotenv==1.0.0
+email-validator==2.2.0
+sqlmodel==0.0.16
+passlib[bcrypt]==1.7.4
+bcrypt==4.0.1
+python-jose==3.3.0
