feat(user-service): SQLModel profiles, JWT-protected /users/me, aggregated /users/health with auth-service dependency

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,8 @@ services:
     build:
       context: ./user-service
       dockerfile: Dockerfile
+    volumes:
+      - user-data:/app/data
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
@@ -122,3 +124,4 @@ services:
 volumes:
   redis-data:
   auth-data:
+  user-data:
