feat: post-service, add post, update, delete, caching

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,32 +12,51 @@ server {
         add_header Content-Type text/plain;
     }
 
-    # Optional root
     location = / {
         return 200 "MicroBlogg API Gateway";
         add_header Content-Type text/plain;
     }
 
-    # NOTE: no trailing slash in proxy_pass lines below
+    # These avoid 301/307 redirects and keep POST bodies intact.
+
+    # /auth
+    location = /auth {
+        proxy_pass http://auth_service/auth;
+    }
+    # /users
+    location = /users {
+        proxy_pass http://user_service/users;
+    }
+    # /posts
+    location = /posts {
+        proxy_pass http://post_service/posts;
+    }
+    # /comments
+    location = /comments {
+        proxy_pass http://comment_service/comments;
+    }
+
     location /auth/     { proxy_pass http://auth_service; }
     location /users/    { proxy_pass http://user_service; }
     location /posts/    { proxy_pass http://post_service; }
     location /comments/ { proxy_pass http://comment_service; }
 
     # Common proxy headers (applies to all locations in this server)
-    proxy_set_header Host              $host;
+    proxy_set_header Host              $http_host;         # preserves :8080
     proxy_set_header X-Real-IP         $remote_addr;
     proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-Port  $server_port;
 
-    # Sensible timeouts during dev (optional)
+    # Timeouts during dev
     proxy_connect_timeout 5s;
     proxy_send_timeout    15s;
     proxy_read_timeout    15s;
 
-    # Avoid unwanted Location header rewrites
+    # Do not rewrite Location headers
     proxy_redirect off;
 
     # Allow JSON bodies comfortably
     client_max_body_size 2m;
+
 }
