--- a/auth-service/requirements.txt
+++ b/auth-service/requirements.txt
@@ -1,8 +1,8 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-pydantic==2.5.0
-email-validator==2.2.0
-sqlmodel==0.0.16
+httpx==0.25.2
+pydantic[email]==2.5.0
+sqlmodel>=0.0.22
+sqlalchemy>=2.0.23
 passlib[bcrypt]==1.7.4
-bcrypt==4.0.1
-python-jose==3.3.0
+pyjwt==2.9.0
