feat(gateway): add nginx upstream with DNS re-resolution and LB for post-service; clean prefix routing for all services

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,17 @@
+# Let Nginx re-resolve Docker service DNS so scaling works (multiple IPs for same name)
+resolver 127.0.0.11 ipv6=off valid=10s;
+
+# Upstreams (service names from docker-compose)
 upstream auth_service     { server auth-service:8000; }
 upstream user_service     { server user-service:8000; }
-upstream post_service     { server post-service:8000; }
 upstream comment_service  { server comment-service:8000; }
+
+# Load-balanced upstream for posts (ready for compose scaling)
+upstream post_backends {
+    zone post_zone 64k;                # shared LB state (optional but good)
+    server post-service:8000 resolve;  # re-resolve service name via Docker DNS
+    keepalive 64;                      # reuse upstream connections
+}
 
 server {
     listen 80;
@@ -12,43 +22,30 @@ server {
         add_header Content-Type text/plain;
     }
 
+    # Root info
     location = / {
         return 200 "MicroBlogg API Gateway";
         add_header Content-Type text/plain;
     }
 
-    # These avoid 301/307 redirects and keep POST bodies intact.
+    location = /auth      { proxy_pass http://auth_service/auth; }
+    location = /users     { proxy_pass http://user_service/users; }
+    location = /comments  { proxy_pass http://comment_service/comments; }
+    location = /posts     { proxy_pass http://post_backends/posts; }
 
-    # /auth
-    location = /auth {
-        proxy_pass http://auth_service/auth;
-    }
-    # /users
-    location = /users {
-        proxy_pass http://user_service/users;
-    }
-    # /posts
-    location = /posts {
-        proxy_pass http://post_service/posts;
-    }
-    # /comments
-    location = /comments {
-        proxy_pass http://comment_service/comments;
-    }
+    location /auth/       { proxy_pass http://auth_service; }
+    location /users/      { proxy_pass http://user_service; }
+    location /comments/   { proxy_pass http://comment_service; }
+    location /posts/      { proxy_pass http://post_backends; }
 
-    location /auth/     { proxy_pass http://auth_service; }
-    location /users/    { proxy_pass http://user_service; }
-    location /posts/    { proxy_pass http://post_service; }
-    location /comments/ { proxy_pass http://comment_service; }
-
-    # Common proxy headers (applies to all locations in this server)
-    proxy_set_header Host              $http_host;         # preserves :8080
+    # Common proxy headers
+    proxy_set_header Host              $http_host;  # preserves :8080 on the client side
     proxy_set_header X-Real-IP         $remote_addr;
     proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header X-Forwarded-Port  $server_port;
 
-    # Timeouts during dev
+    # Timeouts (dev-friendly)
     proxy_connect_timeout 5s;
     proxy_send_timeout    15s;
     proxy_read_timeout    15s;
@@ -58,5 +55,4 @@ server {
 
     # Allow JSON bodies comfortably
     client_max_body_size 2m;
-
 }
