--- a/comment-service/requirements.txt
+++ b/comment-service/requirements.txt
@@ -1,6 +1,8 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-pydantic==2.5.0
-redis==5.0.1
-httpx==0.25.2
-python-dotenv==1.0.0
+fastapi==0.110.0
+uvicorn[standard]==0.27.1
+httpx==0.26.0
+
+sqlmodel==0.0.22
+SQLAlchemy==2.0.25
+pydantic==2.6.1
+pydantic-core==2.16.2
